Build Burrell Angle Slider
please

--- a/TSFSTAKBLCKS.CSharp.csproj
+++ b/TSFSTAKBLCKS.CSharp.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>Android:13</UnityBuildTarget>
     <UnityVersion>5.3.1f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -75,6 +77,7 @@
     <Compile Include="Assets\Scripts\Tank Staff\Tank_Movement.cs" />
     <Compile Include="Assets\Scripts\UI\LeftMovementButton.cs" />
     <Compile Include="Assets\Scripts\UI\RightMovementButton.cs" />
+    <Compile Include="Assets\Scripts\UI\StrenghSlider.cs" />
     <Compile Include="Assets\Scripts\Weapons\Bomb\BombBase.cs" />
     <Compile Include="Assets\Scripts\Weapons\Bomb\Cluster_Bomb.cs" />
     <Compile Include="Assets\Scripts\Weapons\Bomb\Large_Bomb.cs" />
